--- a/template_onepage/css/template.css
+++ b/template_onepage/css/template.css
@@ -1,20 +1,54 @@
 body {
 margin: 0px;
 }
+h1{
+/*fuer die Ueberschrift auf dem Bild*/
+text-align: center;
+font-size: 24px;
+font-family: "Calibri", sans-serif;
+color: white;
+}
 #menu {
+/*POSITION*/
 position: fixed;
 width: 100%;
 height: 80px;
-background-color: silver;
+/*BG*/
+background: -moz-linear-gradient(left, rgba(0,0,0,0) 0%, rgba(226,226,226,1) 35%, rgba(226,226,226,1) 65%, rgba(0,0,0,0) 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(0,0,0,0)), color-stop(35%,rgba(226,226,226,1)), color-stop(65%,rgba(226,226,226,1)), color-stop(100%,rgba(0,0,0,0))); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(left, rgba(0,0,0,0) 0%,rgba(226,226,226,1) 35%,rgba(226,226,226,1) 65%,rgba(0,0,0,0) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(left, rgba(0,0,0,0) 0%,rgba(226,226,226,1) 35%,rgba(226,226,226,1) 65%,rgba(0,0,0,0) 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(left, rgba(0,0,0,0) 0%,rgba(226,226,226,1) 35%,rgba(226,226,226,1) 65%,rgba(0,0,0,0) 100%); /* IE10+ */
+background: linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(226,226,226,1) 35%,rgba(226,226,226,1) 65%,rgba(0,0,0,0) 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#00000000',GradientType=1 ); /* IE6-9 */
+/*TEXT*/
+text-transform: uppercase;
+text-align: center;
+font-size: 16px;
+font-family:"Calibri", sans-serif;
+color: #999999; /*Grauton*/
 }
 #scroll {
-padding-top: 80px; //<!-- ich versteh nur nich warum margin nich geht -->
-background-color: aliceblue;
+padding-top: 80px; /*ich versteh nur nich warum margin nich geht*/
+background-color: white;
 }
 #text {
+/*POSITION*/
 position: fixed;
 bottom: 0px;
 width: 100%;
 height: 200px;
-background-color: silver;
+/*BG*/
+	background: -moz-linear-gradient(left, rgba(0,0,0,0) 0%, rgba(226,226,226,1) 35%, rgba(226,226,226,1) 65%, rgba(0,0,0,0) 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(0,0,0,0)), color-stop(35%,rgba(226,226,226,1)), color-stop(65%,rgba(226,226,226,1)), color-stop(100%,rgba(0,0,0,0))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(left, rgba(0,0,0,0) 0%,rgba(226,226,226,1) 35%,rgba(226,226,226,1) 65%,rgba(0,0,0,0) 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(left, rgba(0,0,0,0) 0%,rgba(226,226,226,1) 35%,rgba(226,226,226,1) 65%,rgba(0,0,0,0) 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(left, rgba(0,0,0,0) 0%,rgba(226,226,226,1) 35%,rgba(226,226,226,1) 65%,rgba(0,0,0,0) 100%); /* IE10+ */
+	background: linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(226,226,226,1) 35%,rgba(226,226,226,1) 65%,rgba(0,0,0,0) 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#00000000',GradientType=1 ); /* IE6-9 */
+	/*TEXT*/
+	text-align: center;
+	font-size: 12px;
+	font-family:"Calibri", sans-serif;
+	color: black;
 }
