--- a/template_onepage/css/template.css
+++ b/template_onepage/css/template.css
@@ -1,54 +1,89 @@
 body {
 margin: 0px;
+background-color: white;
 }
 h1{
-/*fuer die Ueberschrift auf dem Bild*/
-text-align: center;
+/*fuer die Ueberschrift auf dem Bild, ich dachte das sind h1 schriften*/
+/*text-align: center;
 font-size: 24px;
 font-family: "Calibri", sans-serif;
-color: white;
+color: white;*/
+}
+img
+{
+width: 100%;
+height: 100%;
 }
 #menu {
 /*POSITION*/
 position: fixed;
 width: 100%;
-height: 80px;
+height: 25px;
 /*BG*/
-background: -moz-linear-gradient(left, rgba(0,0,0,0) 0%, rgba(226,226,226,1) 35%, rgba(226,226,226,1) 65%, rgba(0,0,0,0) 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(0,0,0,0)), color-stop(35%,rgba(226,226,226,1)), color-stop(65%,rgba(226,226,226,1)), color-stop(100%,rgba(0,0,0,0))); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(left, rgba(0,0,0,0) 0%,rgba(226,226,226,1) 35%,rgba(226,226,226,1) 65%,rgba(0,0,0,0) 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(left, rgba(0,0,0,0) 0%,rgba(226,226,226,1) 35%,rgba(226,226,226,1) 65%,rgba(0,0,0,0) 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(left, rgba(0,0,0,0) 0%,rgba(226,226,226,1) 35%,rgba(226,226,226,1) 65%,rgba(0,0,0,0) 100%); /* IE10+ */
-background: linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(226,226,226,1) 35%,rgba(226,226,226,1) 65%,rgba(0,0,0,0) 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#00000000',GradientType=1 ); /* IE6-9 */
+background: -moz-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(255,255,255,0) 1%, rgba(255,255,255,0.8) 15%, rgba(255,255,255,0.8) 85%, rgba(255,255,255,0) 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(255,255,255,0)), color-stop(1%,rgba(255,255,255,0)), color-stop(15%,rgba(255,255,255,0.8)), color-stop(85%,rgba(255,255,255,0.8)), color-stop(100%,rgba(255,255,255,0))); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(left, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 1%,rgba(255,255,255,0.8) 15%,rgba(255,255,255,0.8) 85%,rgba(255,255,255,0) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(left, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 1%,rgba(255,255,255,0.8) 15%,rgba(255,255,255,0.8) 85%,rgba(255,255,255,0) 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(left, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 1%,rgba(255,255,255,0.8) 15%,rgba(255,255,255,0.8) 85%,rgba(255,255,255,0) 100%); /* IE10+ */
+background: linear-gradient(to right, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 1%,rgba(255,255,255,0.8) 15%,rgba(255,255,255,0.8) 85%,rgba(255,255,255,0) 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#00ffffff',GradientType=1 ); /* IE6-9 */
 /*TEXT*/
+padding-top:8px;
+padding-bottom:8px;
+padding-right:5px;
+padding-left:5px;
 text-transform: uppercase;
 text-align: center;
-font-size: 16px;
+font-size: 24px;
 font-family:"Calibri", sans-serif;
 color: #999999; /*Grauton*/
 }
 #scroll {
-padding-top: 80px; /*ich versteh nur nich warum margin nich geht*/
+padding-top: 30px; /*ich versteh nur nich warum margin nich geht*/
 background-color: white;
+/*TEXT WITH ANIMATION BINDING*/
+-webkit-animation: showCap 5s; /* Chrome, Safari, Opera */
+animation: showCap 5s;
+text-align: center;
+font-size: 32px; /*wird ignoriert???*/
+font-family: "Calibri", sans-serif;
+color: white;
 }
 #text {
 /*POSITION*/
 position: fixed;
 bottom: 0px;
 width: 100%;
-height: 200px;
+height: 150px;
 /*BG*/
-	background: -moz-linear-gradient(left, rgba(0,0,0,0) 0%, rgba(226,226,226,1) 35%, rgba(226,226,226,1) 65%, rgba(0,0,0,0) 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(0,0,0,0)), color-stop(35%,rgba(226,226,226,1)), color-stop(65%,rgba(226,226,226,1)), color-stop(100%,rgba(0,0,0,0))); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(left, rgba(0,0,0,0) 0%,rgba(226,226,226,1) 35%,rgba(226,226,226,1) 65%,rgba(0,0,0,0) 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(left, rgba(0,0,0,0) 0%,rgba(226,226,226,1) 35%,rgba(226,226,226,1) 65%,rgba(0,0,0,0) 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(left, rgba(0,0,0,0) 0%,rgba(226,226,226,1) 35%,rgba(226,226,226,1) 65%,rgba(0,0,0,0) 100%); /* IE10+ */
-	background: linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(226,226,226,1) 35%,rgba(226,226,226,1) 65%,rgba(0,0,0,0) 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#00000000',GradientType=1 ); /* IE6-9 */
-	/*TEXT*/
-	text-align: center;
-	font-size: 12px;
-	font-family:"Calibri", sans-serif;
-	color: black;
+background: -moz-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(255,255,255,0) 1%, rgba(255,255,255,0.8) 15%, rgba(255,255,255,0.8) 85%, rgba(255,255,255,0) 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(255,255,255,0)), color-stop(1%,rgba(255,255,255,0)), color-stop(15%,rgba(255,255,255,0.8)), color-stop(85%,rgba(255,255,255,0.8)), color-stop(100%,rgba(255,255,255,0))); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(left, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 1%,rgba(255,255,255,0.8) 15%,rgba(255,255,255,0.8) 85%,rgba(255,255,255,0) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(left, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 1%,rgba(255,255,255,0.8) 15%,rgba(255,255,255,0.8) 85%,rgba(255,255,255,0) 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(left, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 1%,rgba(255,255,255,0.8) 15%,rgba(255,255,255,0.8) 85%,rgba(255,255,255,0) 100%); /* IE10+ */
+background: linear-gradient(to right, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 1%,rgba(255,255,255,0.8) 15%,rgba(255,255,255,0.8) 85%,rgba(255,255,255,0) 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#00ffffff',GradientType=1 ); /* IE6-9 */
+/*TEXT*/
+padding-top:8px;
+padding-bottom:8px;
+text-align: center;
+font-size: 12px;
+font-family:"Calibri", sans-serif;
+color: black;
 }
+
+/*ANIMATION*/
+/* Chrome, Safari, Opera */
+@-webkit-keyframes showCap
+{
+from {color: grey;text-shadow: 0px -1px 0px rgba(0,0,0,.5); /* 50% black coming from the top */}
+to {color: white;}
+}
+
+/* Standard syntax */
+@keyframes showCap
+{
+from {color: grey;text-shadow: 0px -1px 0px rgba(0,0,0,.5); /* 50% black coming from the top */}
+to {color: white;}
+}
+
