--- a/template_onepage/css/template.css
+++ b/template_onepage/css/template.css
@@ -2,18 +2,44 @@ body {
 margin: 0px;
 background-color: white;
 }
-h1{
-/*fuer die Ueberschrift auf dem Bild, ich dachte das sind h1 schriften*/
-/*text-align: center;
-font-size: 24px;
+h3{
+text-align: center;
+font-size: 60px;
 font-family: "Calibri", sans-serif;
-color: white;*/
-}
+color: white;
+text-shadow: 2px 2px 4px rgba(40, 40, 40, 0.6); /*x y blur*/
+position:relative; 
+top: 400px;/*warum geht hier keine prozent angabe??*/
+/*ANIMATION BINDING*/
+-webkit-animation: showCap 5s; /* Chrome, Safari, Opera */
+animation: showCap 5s;
+} /*Ueberschrift auf Bild*/
 img
 {
 width: 100%;
 height: 100%;
 }
+#menu a.active {color: #707070;}
+a{
+margin-left: 7px;
+margin-right: 7px;
+color: #999999;
+}
+a.glink:active{
+color: #707070;
+}
+a:hover{
+text-decoration:none;
+color: #333333;
+}
+a:active{
+color: #707070;
+}
+a:focus{
+text-decoration:none;
+color: #333333;
+}
+
 #menu {
 /*POSITION*/
 position: fixed;
@@ -30,25 +56,22 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', e
 /*TEXT*/
 padding-top:8px;
 padding-bottom:8px;
-padding-right:5px;
-padding-left:5px;
 text-transform: uppercase;
 text-align: center;
-font-size: 24px;
+font-size: 20px;
 font-family:"Calibri", sans-serif;
 color: #999999; /*Grauton*/
 }
+
 #scroll {
-padding-top: 30px; /*ich versteh nur nich warum margin nich geht*/
+padding-top: 30px;
 background-color: white;
-/*TEXT WITH ANIMATION BINDING*/
--webkit-animation: showCap 5s; /* Chrome, Safari, Opera */
-animation: showCap 5s;
+/*TEXT*/
 text-align: center;
-font-size: 32px; /*wird ignoriert???*/
 font-family: "Calibri", sans-serif;
-color: white;
+color: grey;
 }
+
 #text {
 /*POSITION*/
 position: fixed;
@@ -76,14 +99,24 @@ color: black;
 /* Chrome, Safari, Opera */
 @-webkit-keyframes showCap
 {
-from {color: grey;text-shadow: 0px -1px 0px rgba(0,0,0,.5); /* 50% black coming from the top */}
-to {color: white;}
+	from {
+	color: white;
+	text-shadow: 2px 2px 4px rgba(40, 40, 40, 0.6);
+	}
+	to {
+	color: rgba(255,255,255,0.0);
+	text-shadow: none;
+	}
 }
-
 /* Standard syntax */
 @keyframes showCap
 {
-from {color: grey;text-shadow: 0px -1px 0px rgba(0,0,0,.5); /* 50% black coming from the top */}
-to {color: white;}
+	from {
+	color: white;
+	text-shadow: 2px 2px 4px rgba(40, 40, 40, 0.6);
+	}
+	to {
+	color: rgba(255,255,255,0.0);
+	text-shadow: none;
+	}
 }
-
