--- a/template_onepage/css/template.css
+++ b/template_onepage/css/template.css
@@ -1,33 +1,58 @@
 body {
 margin: 0px;
+padding: 0px;
 background-color: white;
 }
-h3{
-text-align: center;
+/*-----------------*/
+/*UEBERSCHRIFT*/
+h3, h2{ /*Ueberschrift des Unterpunktes auf Bild*/
+visibility:hidden;
+margin: 0px;
+/*text-align: center;*/
 font-size: 60px;
 font-family: "Calibri", sans-serif;
-color: white;
-text-shadow: 2px 2px 4px rgba(40, 40, 40, 0.6); /*x y blur*/
-position:relative; 
-top: 400px;/*warum geht hier keine prozent angabe??*/
+color: rgba(255,255,255,0.0);
+text-shadow: none; /*x y blur*/
+position:absolute;
+top: 50%;
+left: 30%;
+z-index: 1;
+-webkit-margin-before: 0.2 em;
+-webkit-margin-after: 0.2 em;
+}
+.fade{
 /*ANIMATION BINDING*/
 -webkit-animation: showCap 5s; /* Chrome, Safari, Opera */
 animation: showCap 5s;
-} /*Ueberschrift auf Bild*/
-img
-{
+}
+/*-----------------*/
+/*BILDBEREICH*/
+.page p{
+margin: 0px;
+}
+.page {
+overflow-x: hidden; /*zu groﬂe Breite wird geschnitten*/
+margin: 0px;
+padding: 0px;
+width: 100%;
+height: 100%;
+position:relative;
+}
+.page img{
+z-index: -1;
 width: 100%;
 height: 100%;
 }
-#menu a.active {color: #707070;}
-a{
-margin-left: 7px;
-margin-right: 7px;
-color: #999999;
+#scroll { /*brauch man nicht unbedingt? Nur falls bei Bildern text steht*/
+margin: 0px;
+background-color: white;
+/*text*/
+text-align: center;
+font-family: "Calibri", sans-serif;
+color: grey;
 }
-a.glink:active{
-color: #707070;
-}
+/*-----------------*/
+/*MENUE*/
 a:hover{
 text-decoration:none;
 color: #333333;
@@ -39,13 +64,22 @@ a:focus{
 text-decoration:none;
 color: #333333;
 }
-
-#menu {
-/*POSITION*/
+a{
+margin-left: 7px;
+margin-right: 7px;
+color: #999999;
+text-decoration:none;
+}
+.flex {
+/*position*/
 position: fixed;
+top: 0px;
+}
+.menu {
+/*position*/
 width: 100%;
 height: 25px;
-/*BG*/
+/*bg*/
 background: -moz-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(255,255,255,0) 1%, rgba(255,255,255,0.8) 15%, rgba(255,255,255,0.8) 85%, rgba(255,255,255,0) 100%); /* FF3.6+ */
 background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(255,255,255,0)), color-stop(1%,rgba(255,255,255,0)), color-stop(15%,rgba(255,255,255,0.8)), color-stop(85%,rgba(255,255,255,0.8)), color-stop(100%,rgba(255,255,255,0))); /* Chrome,Safari4+ */
 background: -webkit-linear-gradient(left, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 1%,rgba(255,255,255,0.8) 15%,rgba(255,255,255,0.8) 85%,rgba(255,255,255,0) 100%); /* Chrome10+,Safari5.1+ */
@@ -53,7 +87,7 @@ background: -o-linear-gradient(left, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 
 background: -ms-linear-gradient(left, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 1%,rgba(255,255,255,0.8) 15%,rgba(255,255,255,0.8) 85%,rgba(255,255,255,0) 100%); /* IE10+ */
 background: linear-gradient(to right, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 1%,rgba(255,255,255,0.8) 15%,rgba(255,255,255,0.8) 85%,rgba(255,255,255,0) 100%); /* W3C */
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#00ffffff',GradientType=1 ); /* IE6-9 */
-/*TEXT*/
+/*text*/
 padding-top:8px;
 padding-bottom:8px;
 text-transform: uppercase;
@@ -62,23 +96,15 @@ font-size: 20px;
 font-family:"Calibri", sans-serif;
 color: #999999; /*Grauton*/
 }
-
-#scroll {
-padding-top: 30px;
-background-color: white;
-/*TEXT*/
-text-align: center;
-font-family: "Calibri", sans-serif;
-color: grey;
-}
-
+/*-----------------*/
+/*TEXTBEREICH*/
 #text {
-/*POSITION*/
+/*Position*/
 position: fixed;
 bottom: 0px;
 width: 100%;
-height: 150px;
-/*BG*/
+height: 25%;
+/*bg*/
 background: -moz-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(255,255,255,0) 1%, rgba(255,255,255,0.8) 15%, rgba(255,255,255,0.8) 85%, rgba(255,255,255,0) 100%); /* FF3.6+ */
 background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(255,255,255,0)), color-stop(1%,rgba(255,255,255,0)), color-stop(15%,rgba(255,255,255,0.8)), color-stop(85%,rgba(255,255,255,0.8)), color-stop(100%,rgba(255,255,255,0))); /* Chrome,Safari4+ */
 background: -webkit-linear-gradient(left, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 1%,rgba(255,255,255,0.8) 15%,rgba(255,255,255,0.8) 85%,rgba(255,255,255,0) 100%); /* Chrome10+,Safari5.1+ */
@@ -86,7 +112,7 @@ background: -o-linear-gradient(left, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 
 background: -ms-linear-gradient(left, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 1%,rgba(255,255,255,0.8) 15%,rgba(255,255,255,0.8) 85%,rgba(255,255,255,0) 100%); /* IE10+ */
 background: linear-gradient(to right, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 1%,rgba(255,255,255,0.8) 15%,rgba(255,255,255,0.8) 85%,rgba(255,255,255,0) 100%); /* W3C */
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#00ffffff',GradientType=1 ); /* IE6-9 */
-/*TEXT*/
+/*text*/
 padding-top:8px;
 padding-bottom:8px;
 text-align: center;
@@ -94,7 +120,7 @@ font-size: 12px;
 font-family:"Calibri", sans-serif;
 color: black;
 }
-
+/*-----------------*/
 /*ANIMATION*/
 /* Chrome, Safari, Opera */
 @-webkit-keyframes showCap
