--- a/template_onepage/css/template.css
+++ b/template_onepage/css/template.css
@@ -1,58 +1,43 @@
 body {
 margin: 0px;
-padding: 0px;
 background-color: white;
 }
+
 /*-----------------*/
 /*UEBERSCHRIFT*/
-h3, h2{ /*Ueberschrift des Unterpunktes auf Bild*/
-visibility:hidden;
-margin: 0px;
-/*text-align: center;*/
-font-size: 60px;
-font-family: "Calibri", sans-serif;
-color: rgba(255,255,255,0.0);
-text-shadow: none; /*x y blur*/
-position:absolute;
-top: 50%;
-left: 30%;
-z-index: 1;
--webkit-margin-before: 0.2 em;
--webkit-margin-after: 0.2 em;
+h3, h2{ 
+	/*Ueberschrift des Unterpunktes auf Bild*/
+	visibility:hidden;
+	margin: 0px;
+	/*text-align: center;*/
+	font-size: 60px;
+	font-family: "Calibri", sans-serif;
+	color: rgba(255,255,255,0.0);
+	text-shadow: none; /*x y blur*/
+	position:absolute;
+	top: 50%;
+	left: 30%;
+	z-index: 10;
+	-webkit-margin-before: 0.2 em;
+	-webkit-margin-after: 0.2 em;
 }
 .fade{
-/*ANIMATION BINDING*/
--webkit-animation: showCap 5s; /* Chrome, Safari, Opera */
-animation: showCap 5s;
+	/*ANIMATION BINDING*/
+	visibility:visible;
+	-webkit-animation: showCap 5s; /* Chrome, Safari, Opera */
+	animation: showCap 5s;
 }
 /*-----------------*/
-/*BILDBEREICH*/
-.page p{
-margin: 0px;
+
+#menu a.active {color: #707070;}
+a{
+margin-left: 7px;
+margin-right: 7px;
+color: #999999;
 }
-.page {
-overflow-x: hidden; /*zu große Breite wird geschnitten*/
-margin: 0px;
-padding: 0px;
-width: 100%;
-height: 100%;
-position:relative;
+a.glink:active{
+color: #707070;
 }
-.page img{
-z-index: -1;
-width: 100%;
-height: 100%;
-}
-#scroll { /*brauch man nicht unbedingt? Nur falls bei Bildern text steht*/
-margin: 0px;
-background-color: white;
-/*text*/
-text-align: center;
-font-family: "Calibri", sans-serif;
-color: grey;
-}
-/*-----------------*/
-/*MENUE*/
 a:hover{
 text-decoration:none;
 color: #333333;
@@ -64,22 +49,13 @@ a:focus{
 text-decoration:none;
 color: #333333;
 }
-a{
-margin-left: 7px;
-margin-right: 7px;
-color: #999999;
-text-decoration:none;
-}
-.flex {
-/*position*/
-position: fixed;
-top: 0px;
-}
+
 .menu {
-/*position*/
+/*POSITION*/
 width: 100%;
 height: 25px;
-/*bg*/
+z-index: 100;
+/*BG*/
 background: -moz-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(255,255,255,0) 1%, rgba(255,255,255,0.8) 15%, rgba(255,255,255,0.8) 85%, rgba(255,255,255,0) 100%); /* FF3.6+ */
 background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(255,255,255,0)), color-stop(1%,rgba(255,255,255,0)), color-stop(15%,rgba(255,255,255,0.8)), color-stop(85%,rgba(255,255,255,0.8)), color-stop(100%,rgba(255,255,255,0))); /* Chrome,Safari4+ */
 background: -webkit-linear-gradient(left, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 1%,rgba(255,255,255,0.8) 15%,rgba(255,255,255,0.8) 85%,rgba(255,255,255,0) 100%); /* Chrome10+,Safari5.1+ */
@@ -87,7 +63,7 @@ background: -o-linear-gradient(left, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 
 background: -ms-linear-gradient(left, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 1%,rgba(255,255,255,0.8) 15%,rgba(255,255,255,0.8) 85%,rgba(255,255,255,0) 100%); /* IE10+ */
 background: linear-gradient(to right, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 1%,rgba(255,255,255,0.8) 15%,rgba(255,255,255,0.8) 85%,rgba(255,255,255,0) 100%); /* W3C */
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#00ffffff',GradientType=1 ); /* IE6-9 */
-/*text*/
+/*TEXT*/
 padding-top:8px;
 padding-bottom:8px;
 text-transform: uppercase;
@@ -96,15 +72,23 @@ font-size: 20px;
 font-family:"Calibri", sans-serif;
 color: #999999; /*Grauton*/
 }
-/*-----------------*/
-/*TEXTBEREICH*/
-#text {
-/*Position*/
+
+#scroll {
+padding-top: 30px;
+background-color: white;
+/*TEXT*/
+text-align: center;
+font-family: "Calibri", sans-serif;
+color: grey;
+}
+
+#textbox {
+/*POSITION*/
 position: fixed;
-bottom: 0px;
+bottom: -200px;
 width: 100%;
-height: 25%;
-/*bg*/
+height: 150px;
+/*BG*/
 background: -moz-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(255,255,255,0) 1%, rgba(255,255,255,0.8) 15%, rgba(255,255,255,0.8) 85%, rgba(255,255,255,0) 100%); /* FF3.6+ */
 background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(255,255,255,0)), color-stop(1%,rgba(255,255,255,0)), color-stop(15%,rgba(255,255,255,0.8)), color-stop(85%,rgba(255,255,255,0.8)), color-stop(100%,rgba(255,255,255,0))); /* Chrome,Safari4+ */
 background: -webkit-linear-gradient(left, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 1%,rgba(255,255,255,0.8) 15%,rgba(255,255,255,0.8) 85%,rgba(255,255,255,0) 100%); /* Chrome10+,Safari5.1+ */
@@ -112,15 +96,14 @@ background: -o-linear-gradient(left, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 
 background: -ms-linear-gradient(left, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 1%,rgba(255,255,255,0.8) 15%,rgba(255,255,255,0.8) 85%,rgba(255,255,255,0) 100%); /* IE10+ */
 background: linear-gradient(to right, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 1%,rgba(255,255,255,0.8) 15%,rgba(255,255,255,0.8) 85%,rgba(255,255,255,0) 100%); /* W3C */
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#00ffffff',GradientType=1 ); /* IE6-9 */
-/*text*/
-padding-top:8px;
-padding-bottom:8px;
+/*TEXT*/
+padding:8px;
 text-align: center;
 font-size: 12px;
 font-family:"Calibri", sans-serif;
 color: black;
 }
-/*-----------------*/
+
 /*ANIMATION*/
 /* Chrome, Safari, Opera */
 @-webkit-keyframes showCap
@@ -145,4 +128,132 @@ color: black;
 	color: rgba(255,255,255,0.0);
 	text-shadow: none;
 	}
+}
+
+html, body {
+  height: 100%;
+}
+
+
+video {
+	height: auto;
+	width:auto;
+}
+#start img{
+	float: left;
+	max-height:100%;
+	width: auto;
+}
+
+.menu.flex {
+/*POSITION*/
+position: fixed;
+top: 0px;
+}
+#textbox.flex {
+	bottom: 0px;
+-webkit-animation: slideIn 2s; /* Chrome, Safari, Opera */
+animation: slideIn 2s;
+}
+#textbox.unflex {
+-webkit-animation: slideOut 2s; /* Chrome, Safari, Opera */
+animation: slideOut 2s;
+}
+/* Chrome, Safari, Opera */
+@-webkit-keyframes slideIn
+{
+from {bottom: -200px;}
+to {bottom: 0px;}
+}
+
+/* Standard syntax */
+@keyframes slideIn
+{
+from {bottom: -200px;}
+to {bottom: 0px;}
+}
+/* Chrome, Safari, Opera */
+@-webkit-keyframes slideOut
+{
+from {bottom: 0px;}
+to {bottom: -200px;}
+}
+
+/* Standard syntax */
+@keyframes slideOut
+{
+from {bottom: 0px;}
+to {bottom: -200px;}
+}
+.page p{
+margin: 0px;
+}
+.page {
+	/*background-color: beige;
+	overflow:hidden;
+	height: 100%;
+	max-height: 100%;
+	min-height: 100%;*/
+	
+	overflow-x: hidden; /*zu groï¿½e Breite wird geschnitten*/
+	margin: 0px;
+	padding: 0px;
+	width: 100%;
+	height: 100%;
+	position:relative;
+}
+
+.page img{
+z-index: -1;
+}
+#textmargin{/*margin:8px; height:100%;Bitte Padding bei textbox auf 0*/}
+#textlogo{
+	width:120px;
+	height: 100%;
+	float:left;
+}
+#textlogo img{
+	width:auto;
+	height: auto;
+	max-width: 100%;
+	max-height: 100%;
+float: left;
+}
+#texticons{
+	width:120px;
+	height: 100%;
+	float:right;
+	margin-right: 16px;
+	position: relative;
+}
+#texticons a{
+margin-left: 0px;
+margin-right: 0px;
+}
+div.thumb {
+width: 100px;
+height: 100px;
+overflow: hidden;
+margin: auto;
+}
+.staffinfo {
+	width: 150px;
+	display: inline-block;
+vertical-align: top;
+position: relative;
+top: -50px;
+padding-right: 8px;
+}
+.thumb img {
+width: 100%;
+height: auto;
+}
+.bottom {
+	position: absolute;
+	bottom: 0px;
+	text-align: center;
+}
+#fb, #gp {
+	width:10px;
+	height:10px;
 }
