--- a/template_onepage/css/template.css
+++ b/template_onepage/css/template.css
@@ -7,7 +7,7 @@ font-size: 12px;
 font-family:"Calibri", sans-serif;
 color: black;
 }
-html, body,  .page, #scroll, #content{	
+html, body,  .page, #scroll, #content, #gmap{	
 width: 100%;
 height: 100%;
 }
@@ -28,6 +28,11 @@ height: 100%;
 }
 /*--------------------------------------------*/
 /*BILDBEREICH*/
+.category {
+	height: 100%;
+	width: 100%;
+	display: inline-block; /*pages verdecken sich nicht gegenseitig, aber: kein Inhalt zu Kategorie = weiße Seite*/
+}
 .page p{
 margin: 0px;
 }
@@ -45,6 +50,8 @@ z-index: -1;
 /*width: 100%;
 height: 100%;*/
 }
+.gmap{
+}
 #scroll { /*brauch man nicht unbedingt? Nur falls bei Bildern text steht*/
 margin: 0px;
 background-color: white;
@@ -56,22 +63,24 @@ color: grey;
 
 /*UEBERSCHRIFT*/
 h3, h2{ /*Ueberschrift des Unterpunktes auf Bild*/
-visibility:hidden;
+/*visibility:hidden;*/
+position:absolute;
+width: 100%; /*zentriert*/
+top: 38.2%; /*goldener schnitt*/
 margin: 0px;
 /*text-align: center;*/
 font-size: 60px;
 font-family: "Calibri", sans-serif;
-color: rgba(255,255,255,0.0);
+color: white;
 text-shadow: none; /*x y blur*/
-position:absolute;
-top: 50%;
-left: 30%;
 z-index: 1;
 -webkit-margin-before: 0.2 em;
 -webkit-margin-after: 0.2 em;
 }
 .fade{
 /*ANIMATION BINDING*/
+visibility:hidden;
+color: rgba(255,255,255,0.0);
 -webkit-animation: showCap 5s; /* Chrome, Safari, Opera */
 animation: showCap 5s;
 }
@@ -108,6 +117,8 @@ color: #999999; /*Grauton*/
 	/*POSITION*/
 	position: fixed;
 	top: 0px;
+	/*-webkit-animation: menuIn 2s; /* Chrome, Safari, Opera */
+	/*animation: menuIn 2s;*/
 }
 /*Links*/
 a:hover{
@@ -134,6 +145,7 @@ position: fixed;
 bottom: -200px;
 width: 100%;
 height: 150px;
+z-index: 100;
 /*BG*/
 background: rgba(255,255,255,0.8);
 
@@ -253,11 +265,13 @@ color: black;
 {
 	from {
 	color: white;
-	text-shadow: 2px 2px 4px rgba(40, 40, 40, 0.6);
+	text-shadow: 2px 2px 4px rgba(40, 40, 40, 0.6); 
+	visibility:visible;
 	}
 	to {
 	color: rgba(255,255,255,0.0);
 	text-shadow: none;
+	visibility:hidden;
 	}
 }
 /* Standard syntax */
@@ -266,10 +280,12 @@ color: black;
 	from {
 	color: white;
 	text-shadow: 2px 2px 4px rgba(40, 40, 40, 0.6);
+	visibility:visible;
 	}
 	to {
 	color: rgba(255,255,255,0.0);
 	text-shadow: none;
+	visibility:hidden;
 	}
 }
 
@@ -298,4 +314,17 @@ color: black;
 {
 	from {bottom: 0px;}
 	to {bottom: -200px;}
+}
+/* Chrome, Safari, Opera */
+@-webkit-keyframes menuIn
+{
+	from {top: -50px;}
+	to {top: 0px;}
+}
+
+/* Standard syntax */
+@keyframes menuIn
+{
+	from {top: -50px;}
+	to {top: 0px;}
 }
