--- a/template_onepage/css/template.css
+++ b/template_onepage/css/template.css
@@ -27,6 +27,26 @@ height: 100%;
 	height: auto;*/	
 }
 /*--------------------------------------------*/
+/*STARTSEITE*/
+#logo{
+/*float: left;*/
+height: auto;
+width: auto;
+max-height: 100%;
+max-width: 30%;
+}
+#cont{
+	padding: 8px;
+	white-space: nowrap;
+display: flex;
+align-items: center;
+justify-content: center;
+}
+#video{
+max-height: 100%;
+max-width: 75%;
+}
+/*--------------------------------------------*/
 /*BILDBEREICH*/
 .category {
 	height: 100%;
@@ -46,8 +66,8 @@ height: 100%;
 position:relative;
 }
 .page img{
-z-index: -1;
-/*width: 100%;
+/*z-index: -1;
+width: 100%;
 height: 100%;*/
 }
 .gmap{
@@ -69,10 +89,14 @@ width: 100%; /*zentriert*/
 top: 38.2%; /*goldener schnitt*/
 margin: 0px;
 /*text-align: center;*/
-font-size: 60px;
+font-size: 80px;
 font-family: "Calibri", sans-serif;
 color: white;
-text-shadow: none; /*x y blur*/
+text-shadow:
+	-1px -1px 5px #222, 
+	1px -1px 5px #222, 
+	-1px 1px 5px #222, 
+	1px 1px 5px #222;
 z-index: 1;
 -webkit-margin-before: 0.2 em;
 -webkit-margin-after: 0.2 em;
@@ -80,9 +104,24 @@ z-index: 1;
 .fade{
 /*ANIMATION BINDING*/
 visibility:hidden;
-color: rgba(255,255,255,0.0);
+opacity: 0.0;
 -webkit-animation: showCap 5s; /* Chrome, Safari, Opera */
 animation: showCap 5s;
+}
+
+.c_info {
+position:absolute;
+top: 8%;
+left: 8%;
+	
+}
+.c_info h3 {
+position:static;
+}
+#c_text {
+	margin-left : 8px;
+text-align: left;
+font-size: 16px;
 }
 
 /*--------------------------------------------*/
@@ -161,6 +200,7 @@ background: -webkit-linear-gradient(left, rgba(255,255,255,0.3) 0%,rgba(255,255,
 padding-top:8px;
 padding-bottom:8px;
 text-align: center;
+    vertical-align: middle;
 font-size: 12px;
 font-family:"Calibri", sans-serif;
 color: black;
@@ -193,12 +233,22 @@ color: black;
 	max-height: 100%;
 	float: left;
 }
-#text p{
-	/*padding-top: 0.5%;*/
-	padding-left: 8%;
-	padding-right: 8%;
+#text {
+	font-size: 16px;
+	padding-top: 8px;
+	padding-left: 8px;
+	padding-right: 8px;
 }
-
+#text p{
+-webkit-margin-before: 0;
+-webkit-margin-after: 0;
+}
+.column{
+	
+column-count:2;
+-moz-column-count:2; /* Firefox */
+-webkit-column-count:2; /* Safari and Chrome */
+}
 /*-nur für die Ansprechpartner Seite*/
 .thumb {
 	width: 100px;
@@ -264,13 +314,11 @@ color: black;
 @-webkit-keyframes showCap
 {
 	from {
-	color: white;
-	text-shadow: 2px 2px 4px rgba(40, 40, 40, 0.6); 
+	opacity: 1.0;
 	visibility:visible;
 	}
 	to {
-	color: rgba(255,255,255,0.0);
-	text-shadow: none;
+	opacity: 0.0;
 	visibility:hidden;
 	}
 }
@@ -278,13 +326,11 @@ color: black;
 @keyframes showCap
 {
 	from {
-	color: white;
-	text-shadow: 2px 2px 4px rgba(40, 40, 40, 0.6);
+	opacity: 1.0;
 	visibility:visible;
 	}
 	to {
-	color: rgba(255,255,255,0.0);
-	text-shadow: none;
+	opacity: 0.0;
 	visibility:hidden;
 	}
 }
