--- a/template_onepage/css/template.css
+++ b/template_onepage/css/template.css
@@ -11,6 +11,9 @@ html, body,  .page, #scroll, #content, #gmap{
 width: 100%;
 height: 100%;
 }
+strong { /*Joomlafehler*/
+	font-weight: normal;
+}
 /*--------------------------------------------*/
 .wrapper {
     
@@ -121,7 +124,7 @@ position:static;
 #c_text {
 	margin-left : 8px;
 text-align: left;
-font-size: 16px;
+font-size: 20px;
 }
 
 /*--------------------------------------------*/
@@ -164,8 +167,11 @@ a:hover{
 text-decoration:none;
 color: #333333;
 }
+a.active{
+color: #222222;
+}
 a:active{
-color: #707070;
+color: #222222;
 }
 a:focus{
 text-decoration:none;
@@ -201,7 +207,7 @@ padding-top:8px;
 padding-bottom:8px;
 text-align: center;
     vertical-align: middle;
-font-size: 12px;
+font-size: 20px;
 font-family:"Calibri", sans-serif;
 color: black;
 }
@@ -213,6 +219,54 @@ color: black;
 #textbox.unflex {
 	-webkit-animation: slideOut 2s; /* Chrome, Safari, Opera */
 	animation: slideOut 2s;
+}
+/*--------------------------------------------*/
+/*HINTS*/
+
+/*NEWS*/
+#buttonnews {
+z-index: 10;
+background: rgba(255,255,255,0.9);
+position: fixed;
+top: 50px;
+font-size: 22px;
+font-family:"Calibri", sans-serif;
+padding-top:3px;
+padding-bottom:3px;
+width: 70px;
+
+border-top-right-radius: 5px;
+moz-border-radius-topright: 5px;
+-webkit-border-top-right-radius: 5px;
+border-bottom-right-radius: 5px;
+moz-border-radius-bottomright: 5px;
+-webkit-border-bottom-right-radius: 5px;
+}
+
+/*JOBS*/
+#buttonjobs {
+z-index: 10;
+background: rgba(255,255,255,0.9);
+position: fixed;
+top: 90px;
+font-size: 22px;
+font-family:"Calibri", sans-serif;
+padding-top:3px;
+padding-bottom:3px;
+width: 70px;
+
+border-top-right-radius: 5px;
+moz-border-radius-topright: 5px;
+-webkit-border-top-right-radius: 5px;
+border-bottom-right-radius: 5px;
+moz-border-radius-bottomright: 5px;
+-webkit-border-bottom-right-radius: 5px;
+}
+#buttonjobs:hover{
+width: 85px;
+}
+#buttonnews:hover{
+width: 85px;
 }
 
 /*--------------------------------------------*/
@@ -234,22 +288,35 @@ color: black;
 	float: left;
 }
 #text {
-	font-size: 16px;
+	/*/font-size: 20px;
 	padding-top: 8px;
 	padding-left: 8px;
-	padding-right: 8px;
+	padding-right: 8px;/*/
 }
 #text p{
--webkit-margin-before: 0;
--webkit-margin-after: 0;
+	text-align:justify;
+	-webkit-margin-before: 0;
+	-webkit-margin-after: 0;
 }
 .column{
-	
-column-count:2;
--moz-column-count:2; /* Firefox */
--webkit-column-count:2; /* Safari and Chrome */
+	/*/height: 100%;/*/
+	column-count:2;
+	-moz-column-count:2; /* Firefox */
+	-webkit-column-count:2; /* Safari and Chrome */
+}
+.singleCol{ /*/zuviel Text für mehrere Spalten/*/
+	width:50%;
+	margin-left: auto;
+	margin-right: auto;
+}
+.scrollbar{
+	height: 100%;
+	overflow-y: scroll;
 }
 /*-nur für die Ansprechpartner Seite*/
+.scrollstaff{
+	text-align: center;
+}
 .thumb {
 	width: 100px;
 	height: 100px;
@@ -257,15 +324,18 @@ column-count:2;
 	margin: auto;
 }
 .thumb:hover {
-	width: 110px;
-	height: 110px;
+	/*width: 110px;
+	height: 110px;*/
 	position: relative;
-	top: -10px;
-	margin-bottom: -10px;
+	top: -4px;
+	/*margin-bottom: -10px;*/
 }
 .thumb img {
 	width: 100%;
 	height: auto;
+}
+h3.contacts{
+	font-size: 60px;
 }
 .staffinfo {
 	width: 150px;
@@ -277,7 +347,8 @@ column-count:2;
 }
 /*rechter Teil der Textbox*/
 #texticons{ /*Box rechts*/
-	width:120px;
+	font-size: 15px;
+	width:140px;
 	height: 100%;
 	float:right;
 	padding-left: 8px;
@@ -290,8 +361,8 @@ column-count:2;
 	text-align: center;
 }
 #fb, #gp { /*google/facebook icons rechts unten*/
-	width:15px;
-	height:15px;
+	width:20px;
+	height:20px;
 }
 #fb:hover, #gp:hover { 
 	position: relative;
@@ -306,6 +377,10 @@ column-count:2;
 #texticons a:hover{ 
 	color: #999999; /*Grauton*/
 	background: rgba(255,255,255,0.0);
+}
+/*fuer jobtextbereich*/
+.pdftitle{
+font-size: 20px;
 }
 
 /*---------------------------------------------*/
